--- a/css-exercises/foundations/flex/project-landing-page/index.html
+++ b/css-exercises/foundations/flex/project-landing-page/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <div class="header">
             <div class="logo-links-container">
-                <div class="logo">LOGO</div>
+                <div class="logo" style="font-size: 42px; color: #F9FAF8;">333</div>
                 <div class="link-container">
                     <ul>
                         <li><a href="https://google.com">About</a></li>
@@ -20,33 +21,33 @@
             </div>
             <div class="intro">
                 <div class="website-intro">
-                    <div class="text">Sign up for our next robotics conference</div>
-                    <div class="text">Our 3rd annual robotics conference will be held September 4th, at the CFG Bank Arena</div>
-                    <button class="sign-up">Sign up</button>
+                    <div class="text" style="font-size: 32px;">Sign up for our next robotics conference.</div>
+                    <div class="text">Our 3rd annual robotics conference will be held September 4th, at the CFG Bank Arena.</div>
+                    <button class="sign-up" style="margin-top: 8px;">Sign up</button>
                 </div>
                 <div class="conference">
-                    <img src="./images/downtown-city.jpg"></img>
+                    <img src="./images/downtown-city.jpg" alt="downtown-city" width="300" height="auto"></img>
                 </div>
             </div>
         </div>
 
         <div class="information">
-            <div class="text">Industries</div>
+            <div class="industries">Industries</div>
             <div class="industry-containers">
                 <div class="info">
-                    <img src="./images/pexels-pixabay-56030-metal.jpg" alt="minerals"></img>
+                    <img src="./images/pexels-pixabay-56030-metal.jpg" alt="minerals" width="200" height="auto"></img>
                     <div class="text">333 is integrated at all verticals of the robotics supply chain. We provide the highest quality rare earth metals needed for advanced circuitry and next gen neural processing units (NPUs).</div>
                 </div>
                 <div class="info">
-                    <img src="./images/pexels-pok-rie-33563-1432680-semiconductor.jpg" alt="semiconductor"></img>
+                    <img src="./images/pexels-pok-rie-33563-1432680-semiconductor.jpg" alt="semiconductor" width="200" height="auto"></img>
                     <div class="text">We manufacture the most powerful, energy efficient, circuitry, semiconductors, and embedded systems, with foundries on multiple continents.</div>
                 </div>
                 <div class="info">
-                    <img src="./images/humanoid-8722273_640-Robotics.png" alt="humanoid robot"></img>
+                    <img src="./images/humanoid-8722273_640-Robotics.png" alt="humanoid robot" width="200" height="auto"></img>
                     <div class="text">Our robotics facilities are producing cutting-edge huminoid systems that are able to traverse any terrian. We have customers in retail, defense, healthcare, industrial, and will be entering the personal markets soon.</div>
                 </div>
                 <div class="info">
-                    <img src="./images/ai-generated-7957987_640-AI.jpg" alt="server-room"></img>
+                    <img src="./images/ai-generated-7957987_640-AI.jpg" alt="server-room" width="auto" height="133"></img>
                     <div class="text">333 systems are powered by the most advanced AI available. Our industry leading AI software is not only inegrated into our chips but is able to access a vast network of servers for real time data processing for a truly adaptive machine.</div>
                 </div>
             </div>
@@ -54,13 +55,18 @@
 
         <div class="quote">
             <div class="future">"We do not seek to play god for there is only one true living GOD and his name is Jesus Christ, the KING OF KINGS. We only seek to create, and in doing so be fruitful and multiply. For we ourselves are the handy work of the creator"</div>
-            <div class="name">Mr. Nobody</div>
+            <div class="name" style="text-align: right; margin-top: 24px;">Mr. Nobody</div>
         </div>
 
         <div class="footer">
-            <div class="call-t0-action">
-            <div class="text">To speak with one of our industry specialist, act now and discover the exciting ways in which 333 can support you business needs.</div>
-            <button class="contact">Contact</button>
+            <div class="call-to-action">
+                <div class="text" style="width: 400px;"><p style="font-size: 24px;">To speak with one of our industry specialist, act now and discover the exciting ways in which 333 can support you business needs.</p><p>Click the contact button and a representative will reach out soon.</p></div>
+                <button class="contact">Contact</button>
+            </div>
+        </div>
+
+        <div class="copyright">
+            <div class="text">Copyright c The Odin Project 2024</div>
         </div>
     </body>
 
